--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -1,22 +1,31 @@
 <div class="container">
-    <form name="registration" class="head" data-bind="submit: submit">
+    <form name="registration" id="registrationForm" class="head" data-bind="submit: submit">
         <core-field>
-            <paper-input floatinglabel label="Email" type="text" error="input is required!"
-                         data-bind="value: email"></paper-input>
-        </core-field>
-        <core-field>
-            <paper-input floatinglabel label="Login" type="text" error="input is required!"
-                         data-bind="value: login"></paper-input>
-        </core-field>
-        <core-field>
-            <paper-input-decorator floatinglabel label="Password" name="password">
-                <input type="password" data-bind="value: password"/>
+            <paper-input-decorator floatinglabel label="Email">
+                <input type="email" name="email" data-bind="value: email"
+                       error="Input required"/>
             </paper-input-decorator>
         </core-field>
-        <paper-button raised class="accept-pol fullWidth login-register-pol" type="submit">Create account</paper-button>
+        <p data-bind="validationMessage: email" class="errorMessage"></p>
+
+        <core-field>
+            <paper-input-decorator floatinglabel label="Login">
+                <input type="text" name="login" data-bind="value: login"/>
+            </paper-input-decorator>
+        </core-field>
+        <p data-bind="validationMessage: login" class="errorMessage"></p>
+
+        <core-field>
+            <paper-input-decorator floatinglabel label="Password">
+                <input type="password" name="password" data-bind="value: password"/>
+            </paper-input-decorator>
+        </core-field>
+        <p data-bind="validationMessage: password" class="errorMessage"></p>
+
+        <paper-button raised class="accept-pol fullWidth login-register-pol" data-bind="click: submit">Create account
+        </paper-button>
         <div>
             <a href="#login">Have an account?</a>
         </div>
-
     </form>
 </div>
