added new validation on registration and login

--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -6,9 +6,10 @@
             <p class="lead head">Auction 1.0 is a better way to create and host your trades on one of the most popular
                 platform</p>
 
-            <p class="lead head">
+            <p class="head">
                 <a href="#login" id="joinUs-a">
-                    <paper-button raised class="accept-pol">Join Us</paper-button>
+                    <paper-button raised class="accept-pol Width40 login-register-pol">Join Us
+                    </paper-button>
                 </a>
             </p>
         </div>
