--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -1,30 +1,39 @@
 <div class="container">
-    <form name="registration" id="registrationForm" class="head" data-bind="submit: submit">
+    <form name="registration" id="registrationForm" class="center" data-bind="submit: submit">
         <core-field>
             <paper-input-decorator floatinglabel label="Email">
                 <input type="email" name="email" data-bind="value: email"
                        error="Input required"/>
             </paper-input-decorator>
         </core-field>
-        <p data-bind="validationMessage: email" class="errorMessage"></p>
+        <p class="errorMessage" data-bind="if: !email.isValid() && email.isModified()">
+            <span data-bind="validationMessage: email" > </span>
+            <svg viewBox="0 0 24 24" height="20px" width="20px"><g><path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path></g></svg>
+        </p>
 
         <core-field>
             <paper-input-decorator floatinglabel label="Login">
                 <input type="text" name="login" data-bind="value: login"/>
             </paper-input-decorator>
         </core-field>
-        <p data-bind="validationMessage: login" class="errorMessage"></p>
+        <p class="errorMessage" data-bind="if: !login.isValid() && login.isModified()">
+            <span data-bind="validationMessage: login" > </span>
+            <svg viewBox="0 0 24 24" height="20px" width="20px"><g><path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path></g></svg>
+        </p>
 
         <core-field>
             <paper-input-decorator floatinglabel label="Password">
                 <input type="password" name="password" data-bind="value: password"/>
             </paper-input-decorator>
         </core-field>
-        <p data-bind="validationMessage: password" class="errorMessage"></p>
+        <p class="errorMessage" data-bind="if: !password.isValid() && password.isModified()">
+            <span data-bind="validationMessage: password" > </span>
+            <svg viewBox="0 0 24 24" height="20px" width="20px"><g><path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path></g></svg>
+        </p>
 
         <paper-button raised class="accept-pol fullWidth login-register-pol" data-bind="click: submit">Create account
         </paper-button>
-        <div>
+        <div class="text-center">
             <a href="#login">Have an account?</a>
         </div>
     </form>
