--- a/app/views/shell.html
+++ b/app/views/shell.html
@@ -1,17 +1,19 @@
 <core-header-panel>
     <core-toolbar class="medium-tall">
+        <!-- ko if: router.showFullMenu -->
         <paper-icon-button icon="menu" role="icon" tabindex="0" aria-label="menu"></paper-icon-button>
-        <div flex="">Auction 1.0</div>
+        <!-- /ko -->
+        <div flex="" class="caps">Auction 1.0</div>
+        <!-- ko if: router.showFullMenu -->
+        <paper-icon-button icon="search" role="button" tabindex="0" aria-label="search"></paper-icon-button>
+        <paper-icon-button icon="more-vert" role="button" tabindex="0" aria-label="more-vert"></paper-icon-button>
+        <!-- /ko -->
         <div class="bottom fit" horizontal layout>
             <paper-tabs id="notLoggedInMenu" horizontal="" center="" layout=""
                         data-bind="foreach: router.navigationModel, attr: {selected: router.selectedTab}">
                 <paper-tab><a data-bind="attr: { href: hash }"><span data-bind="text: title"></span></a></paper-tab>
             </paper-tabs>
-            <!-- ko if: router.showFullMenu -->
-            <span data-bind="text:router.showFullMenu"></span>
-            <!-- /ko -->
         </div>
-
     </core-toolbar>
     <div data-bind="router: {}">
 
