--- a/app/views/shell.html
+++ b/app/views/shell.html
@@ -9,10 +9,10 @@
             </core-item>
         </core-menu>
     </core-header-panel>
-    <div tool class="fullWidth">
-        <div class="caps title" data-bind="text: title"></div>
+    <div tool flex>
+        <span class="caps title" data-bind="text: title"></span>
         <!-- ko if: router.showFullMenu -->
-        <div id="search" >
+        <div id="search">
             <paper-icon-button icon="search" data-bind=""></paper-icon-button>
             <input type="search" autocomplete="off" style="display: none">
         </div>
