paper-toast duration = '3000'

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -28,7 +28,7 @@
         </p>
         <paper-button raised class="accept-pol fullWidth login-register-pol" data-bind="click: submit">Log In
         </paper-button>
-            <paper-toast data-bind="attr: {text: error}" id="errorToast" ></paper-toast>
+            <paper-toast data-bind="attr: {text: error}" id="errorToast" duration="3000"></paper-toast>
         <div class="text-center"> or <a href="#registration">Create account</a></div>
     </form>
 </div>
