--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -33,7 +33,7 @@
 
         <paper-button raised class="accept-pol fullWidth login-register-pol" data-bind="click: submit">Create account
         </paper-button>
-        <paper-toast data-bind="attr: {text: error}" id="errorToast" ></paper-toast>
+        <paper-toast data-bind="attr: {text: error}" id="errorToast" duration="3000"></paper-toast>
         <div class="text-center">
             <a href="#login">Have an account?</a>
         </div>
