--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
             <span class="bage head">A1.0</span>
