--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <form name="registration" id="registrationForm" class="center" data-bind="submit: submit">
         <core-field>
             <paper-input-decorator floatinglabel label="Email">
