--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -1,5 +1,18 @@
-<div class="container-fluid" data-bind="validationOptions: {messageTemplate: 'myCustomTemplate'}">
-    <form name="login" class="center" data-bind="submit: submit">
+<div class="container-fluid">
+    <form name="login" class="center" data-bind="submit: saveSettings">
+        <core-field>
+            <paper-input-decorator floatinglabel label="Email">
+                <input type="text" name="login" data-bind="value: email"/>
+            </paper-input-decorator>
+        </core-field>
+        <p class="errorMessage" data-bind="if: !email.isValid() && email.isModified()">
+            <span data-bind="validationMessage: email"> </span>
+            <svg viewBox="0 0 24 24" height="20px" width="20px">
+                <g>
+                    <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
+                </g>
+            </svg>
+        </p>
         <core-field>
             <paper-input-decorator floatinglabel label="Login">
                 <input type="text" name="login" data-bind="value: login"/>
@@ -26,10 +39,9 @@
                 </g>
             </svg>
         </p>
-        <paper-button raised class="accept-pol fullWidth login-register-pol" data-bind="click: submit">Log In
+        <paper-button raised class="accept-pol fullWidth login-register-pol" data-bind="click: saveSettings">
+            Save
         </paper-button>
-            <paper-toast data-bind="attr: {text: error}" id="errorToast" duration="3000"></paper-toast>
-        <div class="text-center"> or <a href="#registration">Create account</a></div>
+        <paper-toast data-bind="attr: {text: error}" id="errorToast" duration="3000"></paper-toast>
     </form>
 </div>
-
