logout with modal dialog

--- a/app/views/shell.html
+++ b/app/views/shell.html
@@ -24,3 +24,10 @@
 
     </div>
 </core-scaffold>
+
+<paper-action-dialog heading="Logout" id="logout" backdrop="" autoclosedisabled="" layered="false" role="dialog" layout="" vertical="" tabindex="-1"  transition="core-transition-left">
+
+    <p>Logout? Really?!</p>
+    <paper-button  affirmative="" role="button" tabindex="0" data-bind="click:cancel">Cancel</paper-button>
+    <paper-button  affirmative="" autofocus="" role="button" tabindex="0" data-bind="click:logout">Logout</paper-button>
+</paper-action-dialog>
