--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -1,60 +1,63 @@
 <div class="container-fluid">
-    <form name="login" class="center" data-bind="submit: saveSettings">
-        <core-field>
-            <paper-input-decorator floatinglabel label="Email">
-                <input type="text" name="login" data-bind="value: email"/>
-            </paper-input-decorator>
-        </core-field>
-        <p class="errorMessage" data-bind="if: !email.isValid() && email.isModified()">
-            <span data-bind="validationMessage: email"> </span>
-            <svg viewBox="0 0 24 24" height="20px" width="20px">
-                <g>
-                    <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
-                </g>
-            </svg>
-        </p>
-        <core-field>
-            <paper-input-decorator floatinglabel label="Login">
-                <input type="text" name="login" data-bind="value: login"/>
-            </paper-input-decorator>
-        </core-field>
-        <p class="errorMessage" data-bind="if: !login.isValid() && login.isModified()">
-            <span data-bind="validationMessage: login"> </span>
-            <svg viewBox="0 0 24 24" height="20px" width="20px">
-                <g>
-                    <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
-                </g>
-            </svg>
-        </p>
-        <core-field>
-            <paper-input-decorator floatinglabel label="New Password">
-                <input type="password" name="password" data-bind="value: password"/>
-            </paper-input-decorator>
-        </core-field>
-        <p class="errorMessage" data-bind="if: !password.isValid() && password.isModified()">
-            <span data-bind="validationMessage: password"> </span>
-            <svg viewBox="0 0 24 24" height="20px" width="20px">
-                <g>
-                    <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
-                </g>
-            </svg>
-        </p>
-        <core-field>
-            <paper-input-decorator floatinglabel label="Repeat Password">
-                <input type="password" name="password" data-bind="value: newPassword"/>
-            </paper-input-decorator>
-        </core-field>
-        <p class="errorMessage" data-bind="if: !newPassword.isValid() && newPassword.isModified()">
-            <span data-bind="validationMessage: newPassword"> </span>
-            <svg viewBox="0 0 24 24" height="20px" width="20px">
-                <g>
-                    <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
-                </g>
-            </svg>
-        </p>
-        <paper-button raised class="accept-pol fullWidth login-register-pol" data-bind="click: saveSettings">
-            Save
-        </paper-button>
-        <paper-toast data-bind="attr: {text: error}" id="errorToast" duration="3000"></paper-toast>
-    </form>
+    <fieldset data-bind="attr: {disabled: formLoading}">
+        <form name="login" class="center" data-bind="submit: saveSettings">
+            <core-field>
+                <paper-input-decorator floatinglabel label="Email">
+                    <input type="text" name="login" data-bind="value: email"/>
+                </paper-input-decorator>
+            </core-field>
+            <p class="errorMessage" data-bind="if: !email.isValid() && email.isModified()">
+                <span data-bind="validationMessage: email"> </span>
+                <svg viewBox="0 0 24 24" height="20px" width="20px">
+                    <g>
+                        <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
+                    </g>
+                </svg>
+            </p>
+            <core-field>
+                <paper-input-decorator floatinglabel label="Login">
+                    <input type="text" name="login" data-bind="value: login"/>
+                </paper-input-decorator>
+            </core-field>
+            <p class="errorMessage" data-bind="if: !login.isValid() && login.isModified()">
+                <span data-bind="validationMessage: login"> </span>
+                <svg viewBox="0 0 24 24" height="20px" width="20px">
+                    <g>
+                        <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
+                    </g>
+                </svg>
+            </p>
+            <core-field>
+                <paper-input-decorator floatinglabel label="New Password">
+                    <input type="password" name="password" data-bind="value: password"/>
+                </paper-input-decorator>
+            </core-field>
+            <p class="errorMessage" data-bind="if: !password.isValid() && password.isModified()">
+                <span data-bind="validationMessage: password"> </span>
+                <svg viewBox="0 0 24 24" height="20px" width="20px">
+                    <g>
+                        <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
+                    </g>
+                </svg>
+            </p>
+            <core-field>
+                <paper-input-decorator floatinglabel label="Repeat Password">
+                    <input type="password" name="password" data-bind="value: newPassword"/>
+                </paper-input-decorator>
+            </core-field>
+            <p class="errorMessage" data-bind="if: !newPassword.isValid() && newPassword.isModified()">
+                <span data-bind="validationMessage: newPassword"> </span>
+                <svg viewBox="0 0 24 24" height="20px" width="20px">
+                    <g>
+                        <path d="M1 21h22l-11-19-11 19zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path>
+                    </g>
+                </svg>
+            </p>
+            <paper-button raised class="accept-pol fullWidth login-register-pol" data-bind="click: saveSettings"
+                          data-bind="attr: {disabled: formLoading}">
+                Save
+            </paper-button>
+            <paper-toast data-bind="attr: {text: error}" id="errorToast" duration="3000"></paper-toast>
+        </form>
+    </fieldset>
 </div>
