static view for all auctions

--- a/app/views/content.html
+++ b/app/views/content.html
@@ -1,1 +1,30 @@
-<h1>Main</h1>
+<div class="list-group auctionAll">
+    <a href="" class="list-group-item">
+        <div class="auction">
+            <img src="" alt="" />
+            <div class="auctionTitle">
+                <h3>Title</h3>
+                <p>description</p>
+            </div>
+            <div class="auctionData">
+                <p><span>Username:</span> <span></span></p>
+                <p><span>Start Bet:</span> <span></span></p>
+                <p> <span>End Date:</span> <span></span></p>
+            </div>
+        </div>
+    </a>
+    <a href="" class="list-group-item">
+        <div class="auction">
+            <img src="" alt="" />
+            <div class="auctionTitle">
+                <h3>Title</h3>
+                <p>description</p>
+            </div>
+            <div class="auctionData">
+                <p><span>Username:</span> <span></span></p>
+                <p><span>Start Bet:</span> <span></span></p>
+                <p> <span>End Date:</span> <span></span></p>
+            </div>
+        </div>
+    </a>
+</div>
