Add add auction page

--- a/app/views/shell.html
+++ b/app/views/shell.html
@@ -18,6 +18,8 @@
             <paper-icon-button icon="search" data-bind=""></paper-icon-button>
             <input type="search" autocomplete="off" style="display: none">
         </div>
+        <paper-icon-button style="float: right" icon="add" data-bind="click: function(){router.navigate('add')}"
+                           title="Add Auction"></paper-icon-button>
         <!-- /ko -->
     </div>
     <div fit data-bind="router:{}">
