--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <fieldset data-bind="attr: {disabled: formLoading}">
-        <form name="login" class="center" data-bind="submit: saveSettings">
+        <form class="center" data-bind="submit: saveSettings">
             <core-field>
                 <paper-input-decorator floatinglabel label="Email">
                     <input type="text" name="login" data-bind="value: email"/>
