--- a/css/app.css
+++ b/css/app.css
@@ -186,3 +186,9 @@ html /deep/ [autofocus] {
 paper-action-dialog {
     width: 50%;
 }
+
+@media screen and (max-width: 450px) {
+    paper-action-dialog {
+        width: 95%;
+    }
+}
