Add title to search icon-button

--- a/app/views/shell.html
+++ b/app/views/shell.html
@@ -20,7 +20,7 @@
                            data-bind="click: function(){router.navigate('settings')}"
                            title="Settings"></paper-icon-button>
         <div id="search">
-            <paper-icon-button icon="search" data-bind=""></paper-icon-button>
+            <paper-icon-button icon="search" title="Search"></paper-icon-button>
             <input type="search" autocomplete="off" style="display: none">
         </div>
         <paper-icon-button style="float: right" icon="add" data-bind="click: function(){router.navigate('add')}"
