room view + css refactoring

--- a/app/views/content.html
+++ b/app/views/content.html
@@ -7,7 +7,7 @@
                 <p data-bind="text: description"></p>
             </div>
             <div class="auctionData">
-                <p><span>Username:</span> <span data-bind="text: user.username"></span></p>
+                <p><span>Owner:</span> <span data-bind="text: user.username"></span></p>
                 <p><span>Start Bet:</span> <span data-bind="text: startBet"></span></p>
                 <p><span>End Date:</span> <span data-bind="text: new Date(endDate.iso).toLocaleDateString()"></span></p>
             </div>
