--- a/app/views/myauctions.html
+++ b/app/views/myauctions.html
@@ -2,13 +2,17 @@
     <a data-bind="attr: {href: '#room/' + objectId}" class="list-group-item">
         <div class="auction">
             <img data-bind="attr: {src: imageSrc}"/>
+
             <div class="auctionTitle">
                 <h3 data-bind="text: title"></h3>
+
                 <p data-bind="text: description"></p>
             </div>
             <div class="auctionData">
-                <p><span>Username:</span> <span data-bind="text: user.username"></span></p>
+                <p><span>Owner:</span> <span data-bind="text: user.username"></span></p>
+
                 <p><span>Start Bet:</span> <span data-bind="text: startBet"></span></p>
+
                 <p><span>End Date:</span> <span data-bind="text: new Date(endDate.iso).toLocaleDateString()"></span></p>
             </div>
         </div>
