Add current bet in auctions lists

--- a/app/views/content.html
+++ b/app/views/content.html
@@ -9,6 +9,7 @@
             <div class="auctionData">
                 <p><span>Owner:</span> <span data-bind="text: user.username"></span></p>
                 <p><span>Start Bet:</span> <span data-bind="text: startBet"></span></p>
+                <p><span>Current Bet:</span> <span data-bind="text: currentBet"></span></p>
                 <p><span>End Date:</span> <span data-bind="text: new Date(endDate.iso).toLocaleDateString()"></span></p>
             </div>
         </div>
