--- a/css/app.css
+++ b/css/app.css
@@ -43,6 +43,59 @@ core-scaffold::shadow core-header-panel {
 
 #search {
     float: right;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: -o-flex;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    -o-align-items: center;
+    align-items: center;
+    -webkit-box-flex: 1;
+    -webkit-flex: 0 0 auto;
+    -moz-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    -o-flex: 0 0 auto;
+    flex: 0 0 auto;
+    width: 40px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+#search[show] {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 0 16px;
+    margin-left: 0;
+    color: #000000;
+    background-color: #d9edf7;
+    border-bottom: 1px solid #cccccc;
+    z-index: 10;
+}
+
+#search input[type="search"] {
+    visibility: visible;
+    background-color: inherit;
+    border: none;
+    font-size: 20px;
+    outline: 0;
+    padding: 0;
+    color: #000000;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 0 0;
+    -moz-flex: 1 0 0;
+    -ms-flex: 1 0 0;
+    -o-flex: 1 0 0;
+    flex: 1 0 0;
+    -webkit-appearance: none;
 }
 
 #notLoggedInMenu {
